[package]
name = "metacore"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ctor = "0.4.2"
dirs = "6.0.0"
once_cell = "1.21.3"
rand = "0.8.5"
regex = "1.11.1"
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
